--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <ul>
                         <li><a class="package__item--body__link" href="#ex11" rel="modal:open">«Без тревоги и стресса»</a></li>
                         <div id="ex11" class="modal modal__inf">
-                            <p class="modal__inf--title">«Без тревоги и стресса»</p>
+                            <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Курс поможет вам, если вы устаете, вам не хватает сил, если у вас слишком много психологического напряжения и ответственности. Если вы хотите наслаждаться жизнью и переживать радость, иметь достаточно энергии на все, что запланировали. ВЫ избавитесь от стресса и беспокойства, перестанете тратить время на страхи и тревоги. </p>
                             <!-- /.modal__inf-text -->
@@ -172,7 +172,7 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link" href="#ex12" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                         <div id="ex12" class="modal modal__inf">
-                            <p class="modal__inf--title"> «Укрепление внутреннего взрослого»</p>
+                            <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Как стать взрослым не только по паспорту? Как научиться принимать взвешенные решения, брать на себя ответственность, не бояться самостоятельности? И конечно, жить той жизнь, которую вы хотите? Нужно развивать внутренние качества взрослого. Этот курс - продолжение миникурса “Исцеление внутреннего ребенка”, но его можно проходить и самостоятельно.</p>
                             <!-- /.modal__inf-text -->
@@ -228,7 +228,7 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link" href="#ex16" rel="modal:open">«Эмоции – свобода быть собой»</a></li>
                         <div id="ex16" class="modal modal__inf">
-                            <p class="modal__inf--title"> «Эмоции – свобода быть собой»</p>
+                            <p class="modal__inf--title">Курс «Эмоции – свобода быть собой»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Знания о том, как обогащать жизнь эмоциями и управлять ими с пользой для себя. Как экологично освобождаться от негатива, справляться с обидами, сохранять спокойствие в стрессовых ситуациях, испытывать от жизни радость и удовольствие и вдохновлять всех вокруг.</p>
                             <!-- /.modal__inf-text -->
@@ -361,7 +361,7 @@
                 <!-- /.package__item-header -->
                 <div class="package__item--body">
                     <ul>
-                        <li><a class="package__item--body__link white" href="#ex21" rel="modal:open">«ВТСС» или «ССС» - 1 ступень (можно заменить на РРС 1 ступень)</a></li>
+                        <li><a class="package__item--body__link white" href="#ex21" rel="modal:open">На выбор - I ступень «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex21" class="modal modal__inf">
                             <p class="modal__inf--title">«ВТСС» или «ССС» - 1 ступень (можно заменить на РРС 1 ступень)</p>
                             <!-- /.modal__inf-title -->
@@ -376,7 +376,7 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex22" rel="modal:open">«Без тревоги и стресса»</a></li>
                         <div id="ex22" class="modal modal__inf">
-                            <p class="modal__inf--title">«Без тревоги и стресса»</p>
+                            <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Курс поможет вам, если вы устаете, вам не хватает сил, если у вас слишком много психологического напряжения и ответственности. Если вы хотите наслаждаться жизнью и переживать радость, иметь достаточно энергии на все, что запланировали. ВЫ избавитесь от стресса и беспокойства, перестанете тратить время на страхи и тревоги. </p>
                             <!-- /.modal__inf-text -->
@@ -388,7 +388,7 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex23" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                         <div id="ex23" class="modal modal__inf">
-                            <p class="modal__inf--title">«Укрепление внутреннего взрослого»</p>
+                            <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Как стать взрослым не только по паспорту? Как научиться принимать взвешенные решения, брать на себя ответственность, не бояться самостоятельности? И конечно, жить той жизнь, которую вы хотите? Нужно развивать внутренние качества взрослого. Этот курс - продолжение миникурса “Исцеление внутреннего ребенка”, но его можно проходить и самостоятельно.</p>
                             <!-- /.modal__inf-text -->
@@ -456,7 +456,7 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex28" rel="modal:open">«Эмоции – свобода быть собой»</a></li>
                         <div id="ex28" class="modal modal__inf">
-                            <p class="modal__inf--title"> «Эмоции – свобода быть собой»</p>
+                            <p class="modal__inf--title">Курс «Эмоции – свобода быть собой»</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Знания о том, как обогащать жизнь эмоциями и управлять ими с пользой для себя. Как экологично освобождаться от негатива, справляться с обидами, сохранять спокойствие в стрессовых ситуациях, испытывать от жизни радость и удовольствие и вдохновлять всех вокруг.</p>
                             <!-- /.modal__inf-text -->
@@ -585,7 +585,7 @@
                 <!-- /.package__item-header -->
                 <div class="package__item--body">
                     <ul>
-                        <li><a class="package__item--body__link white" href="#ex31" rel="modal:open">«ВТСС» или «ССС» - 2 ступени</a></li>
+                        <li><a class="package__item--body__link white" href="#ex31" rel="modal:open">На выбор - две ступени «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex31" class="modal modal__inf">
                             <p class="modal__inf--title">«ВТСС» или «ССС» - 2 ступени</p>
                             <!-- /.modal__inf-title -->
@@ -598,9 +598,9 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex32" rel="modal:open">«Родители, род, семья» - 2 ступени</a></li>
+                        <li><a class="package__item--body__link white" href="#ex32" rel="modal:open">«Родители, род, семья» - две ступени</a></li>
                         <div id="ex32" class="modal modal__inf">
-                            <p class="modal__inf--title">«Родители, род, семья» - 2 ступени</p>
+                            <p class="modal__inf--title">«Родители, род, семья» - две ступени</p>
                             <!-- /.modal__inf-title -->
                             <p class="modal__inf--text">Каким ресурсом для нас может быть семья и род, и как использовать этот ресурс в полную силу. Все о родовых и семейных системах и нашем месте в них. Как работать с негативными родовыми установками и менять свое настоящее и будущее в лучшую сторону. </p>
                             <p class="modal__inf--text">Все об отношениях с самыми главными людьми в нашей жизни. Как они влияют на то, что с нами происходит. Как простить обиды, избавиться от чувства вины, принять и полюбить родителей и тем самым открыть себе дорогу в новое счастливое будущее.</p>
@@ -627,7 +627,7 @@
                         <ul>
                             <li><a class="package__item--body__link white" href="#ex34" rel="modal:open">«Без тревоги и стресса»</a></li>
                             <div id="ex34" class="modal modal__inf">
-                                <p class="modal__inf--title">«Без тревоги и стресса»</p>
+                                <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                                 <!-- /.modal__inf-title -->
                                 <p class="modal__inf--text">Курс поможет вам, если вы устаете, вам не хватает сил, если у вас слишком много психологического напряжения и ответственности. Если вы хотите наслаждаться жизнью и переживать радость, иметь достаточно энергии на все, что запланировали. ВЫ избавитесь от стресса и беспокойства, перестанете тратить время на страхи и тревоги. </p>
                                 <!-- /.modal__inf-text -->
@@ -639,7 +639,7 @@
                             <!-- /.package__link-inf -->
                             <li><a class="package__item--body__link white" href="#ex35" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                             <div id="ex35" class="modal modal__inf">
-                                <p class="modal__inf--title"> «Укрепление внутреннего взрослого»</p>
+                                <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                                 <!-- /.modal__inf-title -->
                                 <p class="modal__inf--text">Как стать взрослым не только по паспорту? Как научиться принимать взвешенные решения, брать на себя ответственность, не бояться самостоятельности? И конечно, жить той жизнь, которую вы хотите? Нужно развивать внутренние качества взрослого. Этот курс - продолжение миникурса “Исцеление внутреннего ребенка”, но его можно проходить и самостоятельно.</p>
                                 <!-- /.modal__inf-text -->
@@ -695,7 +695,7 @@
                             <!-- /.package__link-inf -->
                             <li><a class="package__item--body__link white" href="#ex39" rel="modal:open">«Эмоции – свобода быть собой»</a></li>
                             <div id="ex39" class="modal modal__inf">
-                                <p class="modal__inf--title"> «Эмоции – свобода быть собой»</p>
+                                <p class="modal__inf--title">Курс «Эмоции – свобода быть собой»</p>
                                 <!-- /.modal__inf-title -->
                                 <p class="modal__inf--text">Знания о том, как обогащать жизнь эмоциями и управлять ими с пользой для себя. Как экологично освобождаться от негатива, справляться с обидами, сохранять спокойствие в стрессовых ситуациях, испытывать от жизни радость и удовольствие и вдохновлять всех вокруг.</p>
                                 <!-- /.modal__inf-text -->
