--- a/index.html
+++ b/index.html
@@ -363,12 +363,21 @@
                     <ul>
                         <li><a class="package__item--body__link white" href="#ex21" rel="modal:open">На выбор - I ступень «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex21" class="modal modal__inf">
-                            <p class="modal__inf--title">«ВТСС» или «ССС» - 1 ступень (можно заменить на РРС 1 ступень)</p>
+                            <p class="modal__inf--title modal__inf--title__bold">Курс «Время твоего счастья - сейчас» </p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
-                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
+                            <p class="modal__inf--text">I ступень, 16 основных уроков + уроки обратной связи, длительность 6 недель </p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость: 7500 рублей</p>
+                            <p class="modal__inf--text">Интенсив для женщин, которые хотят построить счастливые отношения с самой собой и мужчинами, обрести внутреннюю гармонию, целостность и начать жить полноценной жизнью. Сценарное перепрограммирование: практики по обретению настоящей себя и отношений по судьбе. </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--title modal__inf--title__bold">Курс «Секреты стабильной самооценки» </p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">I ступень, 10 основных уроков + уроки обратной связи, длительность 5 недель </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Глубокое понимание себя, индивидуальных особенностей своей личности и особенностей самооценки. Составление цельной картины по своему типу самооценки, специальные техники и практики для ее коррекции во всех сферах жизни.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">*Для тех, кто проходил оба эти интенсива, есть возможность заменить их на I ступень курса "Родители. Род. Семья" </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Стоимость каждой 1 ступени: 8500 руб.</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="#">Купить II пакет</a>
                             <!-- /.button -->
@@ -400,9 +409,11 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex24" rel="modal:open">«Как найти свой талант»</a></li>
                         <div id="ex24" class="modal modal__inf">
-                            <p class="modal__inf--title">«Как найти свой талант»</p>
+                            <p class="modal__inf--title">Курс «Как найти свой талант»</p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой собственный уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни.</p>
+                            <p class="modal__inf--text">3 практических видеоурока</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой собственный уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни. </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 8000 рублей</p>
                             <!-- /.modal__inf-price -->
@@ -587,12 +598,19 @@
                     <ul>
                         <li><a class="package__item--body__link white" href="#ex31" rel="modal:open">На выбор - две ступени «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex31" class="modal modal__inf">
-                            <p class="modal__inf--title">«ВТСС» или «ССС» - 2 ступени</p>
+                            <p class="modal__inf--title modal__inf--title__bold">Курс «Время твоего счастья - сейчас» </p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
-                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
+                            <p class="modal__inf--text">Две ступени, 16 основных уроков + уроки обратной связи, длительность 12 недель</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость: 7500 рублей</p>
+                            <p class="modal__inf--text">Интенсив для женщин, которые хотят построить счастливые отношения с самой собой и мужчинами, обрести внутреннюю гармонию, целостность и начать жить полноценной жизнью. Сценарное перепрограммирование: практики по обретению настоящей себя и отношений по судьбе. </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--title modal__inf--title__bold">Курс «Секреты стабильной самооценки» </p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">Две ступени, 10 основных уроков + уроки обратной связи, длительность 17 недель </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Глубокое понимание себя, индивидуальных особенностей своей личности и особенностей самооценки. Составление цельной картины по своему типу самооценки, специальные техники и практики для ее коррекции во всех сферах жизни. </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Стоимость двух ступеней каждого курса: 17500 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="#">Купить III пакет</a>
                             <!-- /.button -->
@@ -600,10 +618,13 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex32" rel="modal:open">«Родители, род, семья» - две ступени</a></li>
                         <div id="ex32" class="modal modal__inf">
-                            <p class="modal__inf--title">«Родители, род, семья» - две ступени</p>
+                            <p class="modal__inf--title">Курс «Родители, род, семья» </p>
                             <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">Две ступени, 12 уроков</p>
+                            <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Каким ресурсом для нас может быть семья и род, и как использовать этот ресурс в полную силу. Все о родовых и семейных системах и нашем месте в них. Как работать с негативными родовыми установками и менять свое настоящее и будущее в лучшую сторону. </p>
-                            <p class="modal__inf--text">Все об отношениях с самыми главными людьми в нашей жизни. Как они влияют на то, что с нами происходит. Как простить обиды, избавиться от чувства вины, принять и полюбить родителей и тем самым открыть себе дорогу в новое счастливое будущее.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Все об отношениях с самыми главными людьми в нашей жизни. Как они влияют на то, что с нами происходит. Как простить обиды, избавиться от чувства вины, принять и полюбить родителей и тем самым открыть себе дорогу в новое счастливое будущее.  </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 19000 рублей</p>
                             <!-- /.modal__inf-price -->
@@ -611,12 +632,13 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex33" rel="modal:open">«Осознанное родительство» </a></li>
+                        <li><a class="package__item--body__link white" href="#ex33" rel="modal:open">«Осознанное родительство»</a></li>
                         <div id="ex33" class="modal modal__inf">
-                            <p class="modal__inf--title">«Осознанное родительство» - 2 ступени</p>
+                            <p class="modal__inf--title">Курс «Осознанное родительство» </p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках. Курс состоит из двух частей: первая посвящена подготовке к беременности, и тому, как прожить беременность и роды, вторая – первому году жизни малыша и адаптации семьи к ребенку. 
-                            </p>
+                            <p class="modal__inf--text">Две ступени, 19 уроков </p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках. Курс состоит из двух частей: первая посвящена подготовке к беременности, и тому, как прожить беременность и роды, вторая – первому году жизни малыша и адаптации семьи к ребенку. </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 45000 рублей</p>
                             <!-- /.modal__inf-price -->
@@ -721,9 +743,11 @@
                             <!-- /.package__link-inf -->
                             <li><a class="package__item--body__link white" href="#ex301" rel="modal:open">«Как найти свой талант»</a></li>
                         <div id="ex301" class="modal modal__inf">
-                            <p class="modal__inf--title">«Как найти свой талант»</p>
+                            <p class="modal__inf--title">Курс «Как найти свой талант»</p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой собственный уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни.</p>
+                            <p class="modal__inf--text">3 практических видеоурока</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой собственный уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни. </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 8000 рублей</p>
                             <!-- /.modal__inf-price -->
