--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <!-- /.package__item-header -->
                 <div class="package__item--body">
                     <ul>
-                        <li><a class="package__item--body__link" href="#ex11" rel="modal:open">«Без тревоги и стресса»</a></li>
+                        <li><a class="package__item--body__link new" href="#ex11" rel="modal:open">«Без тревоги и стресса»</a></li>
                         <div id="ex11" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                             <!-- /.modal__inf-title -->
@@ -170,7 +170,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link" href="#ex12" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
+                        <li><a class="package__item--body__link new" href="#ex12" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                         <div id="ex12" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                             <!-- /.modal__inf-title -->
@@ -182,7 +182,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link" href="#ex13" rel="modal:open">«Антиконфликт»</a></li>
+                        <li><a class="package__item--body__link new" href="#ex13" rel="modal:open">«Антиконфликт»</a></li>
                         <div id="ex13" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Антиконфликт»</p>
                             <!-- /.modal__inf-title -->
@@ -383,7 +383,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex22" rel="modal:open">«Без тревоги и стресса»</a></li>
+                        <li><a class="package__item--body__link white new-white" href="#ex22" rel="modal:open">«Без тревоги и стресса»</a></li>
                         <div id="ex22" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                             <!-- /.modal__inf-title -->
@@ -395,7 +395,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex23" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
+                        <li><a class="package__item--body__link white new-white" href="#ex23" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                         <div id="ex23" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                             <!-- /.modal__inf-title -->
@@ -421,7 +421,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex25" rel="modal:open">«Антиконфликт»</a></li>
+                        <li><a class="package__item--body__link white new-white" href="#ex25" rel="modal:open">«Антиконфликт»</a></li>
                         <div id="ex25" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Антиконфликт»</p>
                             <!-- /.modal__inf-title -->
@@ -647,7 +647,7 @@
                         </div>
                         <!-- /.package__link-inf -->
                         <ul>
-                            <li><a class="package__item--body__link white" href="#ex34" rel="modal:open">«Без тревоги и стресса»</a></li>
+                            <li><a class="package__item--body__link white new" href="#ex34" rel="modal:open">«Без тревоги и стресса»</a></li>
                             <div id="ex34" class="modal modal__inf">
                                 <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                                 <!-- /.modal__inf-title -->
@@ -659,7 +659,7 @@
                                 <!-- /.button -->
                             </div>
                             <!-- /.package__link-inf -->
-                            <li><a class="package__item--body__link white" href="#ex35" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
+                            <li><a class="package__item--body__link white new" href="#ex35" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                             <div id="ex35" class="modal modal__inf">
                                 <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                                 <!-- /.modal__inf-title -->
@@ -671,7 +671,7 @@
                                 <!-- /.button -->
                             </div>
                             <!-- /.package__link-inf -->
-                            <li><a class="package__item--body__link white" href="#ex36" rel="modal:open">«Антиконфликт»</a></li>
+                            <li><a class="package__item--body__link white new" href="#ex36" rel="modal:open">«Антиконфликт»</a></li>
                             <div id="ex36" class="modal modal__inf">
                                 <p class="modal__inf--title">Курс «Антиконфликт»</p>
                                 <!-- /.modal__inf-title -->
