Trying to do it...

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <!-- /.package__item-header -->
                 <div class="package__item--body">
                     <ul>
-                        <li><a class="package__item--body__link white new-white" href="#ex22" rel="modal:open">«Без тревоги и стресса»</a></li>
+                        <li><a class="package__item--body__link white new new-white" href="#ex22" rel="modal:open">«Без тревоги и стресса»</a></li>
                         <div id="ex22" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Без тревоги и стресса»</p>
                             <!-- /.modal__inf-title -->
@@ -373,7 +373,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white new-white" href="#ex23" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
+                        <li><a class="package__item--body__link white new new-white" href="#ex23" rel="modal:open">«Укрепление внутреннего взрослого»</a></li>
                         <div id="ex23" class="modal modal__inf">
                             <p class="modal__inf--title">Новый курс «Укрепление внутреннего взрослого»</p>
                             <!-- /.modal__inf-title -->
@@ -385,7 +385,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white new-white" href="#ex25" rel="modal:open">«Антиконфликт»</a></li>
+                        <li><a class="package__item--body__link white new new-white" href="#ex25" rel="modal:open">«Антиконфликт»</a></li>
                         <div id="ex25" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Антиконфликт»</p>
                             <!-- /.modal__inf-title -->
