--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <div class="package__item--price">
                     <div class="package__item--price__title">Стоимость I пакета:</div>
                     <!-- /.package__item-price__title -->
-                    <div class="package__item--price__old -dark">60 700 рублей</div>
+                    <div class="package__item--price__old -dark">61 200 рублей</div>
                     <!-- /.package__item-price__title -->
                     <div class="package__item--price__new">5 800 рублей</div>
                     <!-- /.package__item-price__title -->
@@ -336,7 +336,7 @@
                 <!-- /.package__item-price -->
                 <div class="package__item--footer">
                     <div class="package__item--footer__buy">
-                        <a class="button button-card" href="#">Купить</a>
+                        <a class="button button-card button-card__red" href="#">Купить</a>
                         <a class="arrow" href="#">
                             <svg><use href="sprite.svg#arrow"></use></svg>
                         </a>
@@ -567,7 +567,7 @@
                 <div class="package__item--price">
                     <div class="package__item--price__title white">Стоимость II пакета:</div>
                     <!-- /.package__item-price__title -->
-                    <p class="package__item--price__old white ">75 000 рублей</p>
+                    <p class="package__item--price__old white ">77 700 рублей</p>
                     <!-- /.package__item-price__title -->
                     <div class="package__item--price__new white">9 900 рублей</div>
                     <!-- /.package__item-price__title -->
@@ -830,7 +830,7 @@
                 <div class="package__item--price">
                     <div class="package__item--price__title white">Стоимость III пакета:</div>
                     <!-- /.package__item-price__title -->
-                    <p class="package__item--price__old white ">140 700 рублей</p>
+                    <p class="package__item--price__old white ">150 700 рублей</p>
                     <!-- /.package__item-price__title -->
                     <div class="package__item--price__new white">14 700 рублей</div>
                     <!-- /.package__item-price__title -->
