--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <meta property="og:type" content="article">
      <meta property="og:site_name" content="Добрый психолог Вадим Куркин">
      <meta property="og:url" content="https://vadimkurkin.com/anti-conflict">
-     <meta property="og:description" content="Новогодняя распродажа курсов!">
+     <meta property="og:description" content="Уроки по саморазвитию на любой вкус">
      <meta property="og:image:secure_url" content="https://vadimkurkin.com/sale/snippet-sale.jpg">
      <meta property="vk:image" content="https://vadimkurkin.com/sale/snippet-sale.jpg"> 
      <meta property="twitter:image" content="https://vadimkurkin.com/sale/snippet-sale.jpg">
@@ -144,7 +144,7 @@
         <!-- /.container -->
     </section>
     <!-- /.video -->
-    <div class="package">
+    <div class="package" id="course">
         <h2 class="title title-dark">Уроки по саморазвитию на любой вкус</h2>
         <!-- /.title -->
         <div class="package__inner">
