--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1 class="title title-intro">Новогодняя распродажа курсов</h1>
                 <!-- /.title -->
                 <p class="subtitle text">Подари себе новую жизнь. Раскрой
-                    свои таланты. Осуществи свои мечты</p>
+                    свои таланты. Осуществи мечты</p>
                 <!-- /.subtitle -->
                 <div class="intro-timer__title--mobile">До конца распродажи осталось:</div>
             </div>
@@ -553,7 +553,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Глубокое понимание себя, индивидуальных особенностей своей личности и особенностей самооценки. Составление цельной картины по своему типу самооценки, специальные техники и практики для ее коррекции во всех сферах жизни.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--text">*Для тех, кто проходил оба эти интенсива, есть возможность заменить их на I ступень курса "Родители. Род. Семья" </p>
+                            <p class="modal__inf--text modal__inf--text__bold">*Для тех, кто проходил оба эти интенсива, есть возможность заменить их на I ступень курса "Родители. Род. Семья" </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость каждой 1 ступени: 8500 руб.</p>
                             <!-- /.modal__inf-price -->
