--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Курс дает глубокое понимание себя, индивидуальных особенностей своей личности и самооценки. Вы составите цельную картину своей самооценки, получите специальные техники и практики для ее коррекции. И в итоге научитесь любить и ценить себя, станете более уверены в себе. Курс дает возможность полностью изменить свою жизнь, так как самооценка - одна из самых важных особенностей нашего характера и влияет на все сферы нашей жизни.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость двух ступеней каждого курса: 17500 рублей</p>
+                            <p class="modal__inf--price">Стоимость двух ступеней каждого курса: 17 500 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="#">Купить III пакет</a>
                             <!-- /.button -->
