Italic and Bold

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Курс дает глубокое понимание себя, индивидуальных особенностей своей личности и самооценки. Вы составите цельную картину своей самооценки, получите специальные техники и практики для ее коррекции. И в итоге научитесь любить и ценить себя, станете более уверены в себе. Курс дает возможность полностью изменить свою жизнь, так как самооценка - одна из самых важных особенностей нашего характера и влияет на все сферы нашей жизни.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--text modal__inf--text__bold">*Для тех, кто проходил оба эти интенсива, есть возможность заменить их на I ступень курса "Родители. Род. Семья" </p>
+                            <p class="modal__inf--text modal__inf--text__italic">*Для тех, кто проходил оба эти интенсива, есть возможность заменить их на I ступень курса «Родители. Род. Семья» </p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость 1 ступени каждого курса: 8500 руб.</p>
                             <!-- /.modal__inf-price -->
